--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
       "maintanance": [
         "dist/maintanance"
       ],
+      "ohmsCalculator": [
+        "dist/ohms-calculator"
+      ],
       "pageNotFound": [
         "dist/page-not-found"
       ]
