--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
     "noImplicitReturns": true,
     "strictPropertyInitialization": false,
     "paths": {
+      "core": [
+        "dist/core"
+      ],
       "maintanance": [
         "dist/maintanance"
       ],
