--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@ng-select/ng-select": "^11.2.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "echarts": "^5.5.1",
+    "matter-js": "^0.20.0",
+    "ngx-echarts": "^18.0.0",
+    "p5": "^1.11.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -30,6 +34,8 @@
     "@angular/cli": "^16.2.6",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/matter-js": "^0.19.7",
+    "@types/p5": "^1.7.6",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
